# tiny_runtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  argparser.h  config.h  elf_size.cpp  elf_size.h  image.cpp  image.h  ldcache.cpp  ldcache.h  log.cpp  log.h  nvidia.cpp  nvidia.h  os.cpp  os.h  run.h  scope_guard.h  serialization.h  static_path.h  tiny_runtime.cpp
.github/workflows/: ci.yaml
utils/apparmor/: tiny_runtime
utils/build_container/: Dockerfile
